# rogger

./: Cargo.toml  Dockerfile  README.md  build_run.sh  docker-compose.yml
src/: cache.rs  dynamic_site.rs  main.rs  posts.rs  rogger_cfg.rs  sesser.rs  users.rs
templates/: aboutme.html  index.html  login.html  post.html  posts.html
templates/cms/: auth.html  index.html  post.html  posts.html
web/: index.html  login.html  post.html  posts.html
web/cms/: login.html  post.html  posts.html
web/css/: cms.css  main.css
