[package]
name = "rogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version="1.0.160", features = ["derive"] }
markdown = "1.0.0-alpha.7"
sha2 = "0.10.6"
rand = "0.8.5"
rusqlite = "0.29.0"
redis = "0.23.0"
askama = "0.12.0"

